chores: Fix Scrollbar issue

--- a/src/scss/components/_sidebar.scss
+++ b/src/scss/components/_sidebar.scss
@@ -25,7 +25,6 @@ body {
   /* 전체 감싸는 div */
   overflow-x: hidden; /* 가로 scroll bar 방지 */
   width: 100%;
-  height: 100%;
 }
 .sidebar,
 main {
@@ -38,13 +37,12 @@ main {
 
 .sidebar {
   @include flexbox(column, flex-start, center);
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
-  margin-top: rem(-14px);
   left: calc(-1 * $hiddenSidebarWidth);
   width: $openSidebarWidth;
-  // height: 100%;
+  height: 100%;
   padding: rem(30);
   background-color: $primary01;
   &:hover,
